labs/11-ingress/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: k8s-playground-ingres
    namespace: cahit
  spec:
    ingressClassName: nginx
    rules:
      - host: cahit.aselsan.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: playground-svc
                  port:
                    number: 8082
              path: /
